--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,8 @@ version: 0.5.0
 description: Built_redux provider for Flutter
 homepage: https://github.com/davidmarne/flutter_built_redux
 dependencies:
-  # built_redux:
-  #   git: https://github.com/ga6559/built_redux
   built_redux:
-    path: ../built_redux
+    git: https://github.com/ga6559/built_redux
   flutter:
     sdk: flutter
   meta: ^1.0.3
